--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "mobx": "^3.3.1",
     "mobx-react": "^4.3.4",
     "moment": "^2.19.1",
+    "prop-types": "^15.6.0",
     "react": "^16.0.0",
     "react-alert": "^2.4.0",
     "react-chartjs-2": "^2.6.4",
