--- a/package.json
+++ b/package.json
@@ -27,12 +27,12 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "devDependencies": {
+  /*"devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-es2017": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "webpack": "^3.8.1",
     "webpack-dev-server": "^2.9.4"
-  }
+  }*/
 }
