--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.15",
     "react-stepzilla": "^4.6.3",
+    "react-typeform": "^0.1.1",
     "recharts": "^1.0.0-beta.0",
     "semantic-ui-css": "^2.2.12",
     "semantic-ui-react": "^0.75.1",
