--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.17.0",
     "chartjs": "^0.3.24",
     "mobx": "^3.3.1",
     "mobx-react": "^4.3.4",
