--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.17.0",
+    "chart.js": "^2.7.1",
     "chartjs": "^0.3.24",
     "mobx": "^3.3.1",
     "mobx-react": "^4.3.4",
@@ -11,6 +12,7 @@
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
     "react-alert": "^2.4.0",
+    "react-chartjs": "^0.8.0",
     "react-chartjs-2": "^2.6.4",
     "react-dom": "^16.0.0",
     "react-router": "^4.2.0",
