--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-stepzilla": "^4.6.3",
     "react-typeform": "^0.1.1",
     "recharts": "^1.0.0-beta.0",
+    "recompose": "^0.26.0",
     "semantic-ui-css": "^2.2.12",
     "semantic-ui-react": "^0.75.1",
     "web3": "0.19.0"
