--- a/package.json
+++ b/package.json
@@ -29,14 +29,20 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "test:truffle": "cd solidity && truffle test",
+    "build:contracts": "cd solidity && truffle compile && rimraf ../src/assets/contracts/* && cp -R build/contracts ../src/assets"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-es2017": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "expect": "^21.2.1",
+    "rimraf": "^2.6.2",
+    "should": "^13.1.3",
     "webpack": "^3.8.1",
-    "webpack-dev-server": "^2.9.4"
+    "webpack-dev-server": "^2.9.4",
+    "zeppelin-solidity": "1.3.0"
   }
 }
