--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-alert": "^2.4.0",
     "react-chartjs": "^0.8.0",
     "react-chartjs-2": "^2.6.4",
+    "react-confirm-alert": "^1.0.8",
     "react-dom": "^16.0.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
