--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "chart.js": "^2.7.1",
     "chartjs": "^0.3.24",
+    "istanbul": "^0.4.5",
     "mobx": "^3.3.1",
     "mobx-react": "^4.3.4",
     "moment": "^2.19.1",
@@ -33,6 +34,7 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "test:truffle": "cd solidity && truffle test",
+    "test:coverage": "./node_modules/.bin/solidity-coverage",
     "build:contracts": "cd solidity && truffle migrate && rimraf ../src/assets/contracts/* && cp -R build/contracts ../src/assets"
   },
   "devDependencies": {
@@ -43,6 +45,7 @@
     "expect": "^21.2.1",
     "rimraf": "^2.6.2",
     "should": "^13.1.3",
+    "solidity-coverage": "^0.4.3",
     "webpack": "^3.8.1",
     "webpack-dev-server": "^2.9.4",
     "zeppelin-solidity": "1.3.0"
