--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "chart.js": "^2.7.1",
     "chartjs": "^0.3.24",
+    "ipfs": "^0.27.6",
     "mobx": "^3.3.1",
     "mobx-react": "^4.3.4",
     "moment": "^2.19.1",
