--- a/package.json
+++ b/package.json
@@ -4,38 +4,78 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "autoprefixer": "7.1.6",
+    "@babel/core": "7.0.0-beta.37",
+    "@babel/runtime": "7.0.0-beta.37",
+    "babel-engine-plugin": "^0.1.2",
+    "babel-eslint": "7.2.3",
+    "babel-jest": "20.0.3",
+    "babel-loader": "7.1.2",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react-app": "^3.1.0",
+    "babel-preset-stage-2": "^6.24.1",
+    "babel-runtime": "6.26.0",
+    "case-sensitive-paths-webpack-plugin": "2.1.1",
+    "chalk": "1.1.3",
     "chart.js": "^2.7.1",
     "chartjs": "^0.3.24",
+    "css-loader": "0.28.7",
+    "dotenv": "4.0.0",
+    "eslint": "4.10.0",
+    "eslint-config-react-app": "^2.0.1",
+    "eslint-loader": "1.9.0",
+    "eslint-plugin-flowtype": "2.39.1",
+    "eslint-plugin-import": "2.8.0",
+    "eslint-plugin-jsx-a11y": "5.1.1",
+    "eslint-plugin-react": "7.4.0",
+    "extract-text-webpack-plugin": "3.0.2",
+    "file-loader": "1.1.5",
+    "fs-extra": "3.0.1",
+    "html-webpack-plugin": "2.29.0",
     "ipfs": "^0.27.6",
     "istanbul": "^0.4.5",
+    "jest": "20.0.4",
     "mobx": "^3.3.1",
     "mobx-react": "^4.3.4",
     "moment": "^2.19.1",
+    "object-assign": "4.1.1",
+    "postcss-flexbugs-fixes": "3.2.0",
+    "postcss-loader": "2.0.8",
+    "promise": "8.0.1",
     "prop-types": "^15.6.0",
+    "raf": "3.4.0",
     "react": "^16.0.0",
     "react-alert": "^2.4.0",
     "react-chartjs": "^0.8.0",
     "react-chartjs-2": "^2.6.4",
     "react-confirm-alert": "^1.0.8",
+    "react-dev-utils": "^4.2.0",
     "react-dom": "^16.0.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.0.15",
     "react-stepzilla": "^4.6.3",
     "react-typeform": "^0.1.1",
     "recharts": "^1.0.0-beta.0",
     "recompose": "^0.26.0",
     "semantic-ui-css": "^2.2.12",
     "semantic-ui-react": "^0.75.1",
+    "style-loader": "0.19.0",
+    "sw-precache-webpack-plugin": "0.11.4",
+    "thread-loader": "1.1.2",
     "truffle-contract": "^3.0.1",
-    "web3": "0.19.0"
+    "uglifyjs-webpack-plugin": "^1.0.0-beta.1",
+    "url-loader": "0.6.2",
+    "web3": "0.19.0",
+    "webpack": "3.8.1",
+    "webpack-dev-server": "2.9.3",
+    "webpack-manifest-plugin": "1.3.2",
+    "whatwg-fetch": "2.0.3"
   },
   "scripts": {
     "blockchain": "concurrently \"testrpc\" \"npm run build:contracts\"",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
+    "start": "node scripts/start.js",
+    "build": "node scripts/build.js",
+    "test": "node scripts/test.js --env=jsdom",
     "test:truffle": "cd solidity && truffle test",
     "test:coverage": "./node_modules/.bin/solidity-coverage",
     "build:contracts": "cd solidity && truffle migrate && rimraf ../src/assets/contracts && cp -R build/contracts ../src/assets/contracts/"
@@ -50,8 +90,51 @@
     "rimraf": "^2.6.2",
     "should": "^13.1.3",
     "solidity-coverage": "^0.4.3",
+    "uglify-js": "git+https://github.com/mishoo/UglifyJS2.git#harmony-v2.8.22",
     "webpack": "^3.8.1",
     "webpack-dev-server": "^2.9.4",
     "zeppelin-solidity": "1.3.0"
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "src/**/*.{js,jsx,mjs}"
+    ],
+    "setupFiles": [
+      "<rootDir>/config/polyfills.js"
+    ],
+    "testMatch": [
+      "<rootDir>/src/**/__tests__/**/*.{js,jsx,mjs}",
+      "<rootDir>/src/**/?(*.)(spec|test).{js,jsx,mjs}"
+    ],
+    "testEnvironment": "node",
+    "testURL": "http://localhost",
+    "transform": {
+      "^.+\\.(js|jsx|mjs)$": "<rootDir>/node_modules/babel-jest",
+      "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
+      "^(?!.*\\.(js|jsx|mjs|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
+    },
+    "transformIgnorePatterns": [
+      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|mjs)$"
+    ],
+    "moduleNameMapper": {
+      "^react-native$": "react-native-web"
+    },
+    "moduleFileExtensions": [
+      "web.js",
+      "mjs",
+      "js",
+      "json",
+      "web.jsx",
+      "jsx",
+      "node"
+    ]
+  },
+  "babel": {
+    "presets": [
+      "react-app"
+    ]
+  },
+  "eslintConfig": {
+    "extends": "react-app"
   }
 }
