--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "babel-preset-react": "^6.24.1",
     "concurrently": "^3.5.1",
     "expect": "^21.2.1",
+    "js-yaml": "^3.10.0",
     "rimraf": "^2.6.2",
     "should": "^13.1.3",
     "solidity-coverage": "^0.4.3",
