--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-confirm-alert": "^1.0.8",
     "react-dev-utils": "^4.2.0",
     "react-dom": "^16.0.0",
+    "react-markdown": "^3.1.5",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-stepzilla": "^4.6.3",
